--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/wddm120/darkairbnb#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "twilio": "^3.39.5"
