--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/wddm120/darkairbnb#readme",
   "dependencies": {
     "@sendgrid/mail": "^6.5.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "twilio": "^3.39.5"
