--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/wddm120/darkairbnb#readme",
   "dependencies": {
     "@sendgrid/mail": "^6.5.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mongoose": "^5.9.7",
     "twilio": "^3.39.5"
   }
 }
