--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev":"nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,10 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.9.7",
+    "mongoose-unique-validator": "^2.0.3",
     "twilio": "^3.39.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
