--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.2",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
     "twilio": "^3.39.5"
